# 2020-203

./: .gitignore  CMakeLists.txt  Makefile  README.md  ashryatovarr.cpp  ashryatovarr.h  bochkarevda.cpp  bochkarevda.h  borisovayu.cpp  borisovayu.h  dvoryaninovada.cpp  dvoryaninovada.h  edelevaup.cpp  edelevaup.h  garinma.cpp  garinma.h  git reset --684eba12da203bdbb071dad0fd0dcbad7b817d80  golovatyukam.cpp  golovatyukam.h  gorbunovaa.cpp  gorbunovaa.h  guskovas.cpp  guskovas.h  isokovaa.cpp  isokovaa.h  kazakovais.cpp  kazakovais.h  kirdyushkindv.cpp  kirdyushkindv.h  kotkovsn.cpp  kotkovsn.h  kozinasa.cpp  kozinasa.h  kozlovaes.cpp  kozlovaes.h  kvashninka.cpp  kvashninka.h  landyshevav.cpp  landyshevav.h  loginovvv.cpp  (+21 more)
